tests/errors/macro/macro_long_comment_without_end/comment_without_end.c
int main()
{
	/*	// незакрытый комментарий в конце файла
	return 0;
}
